# Quilvar

./: .gitignore  README.md  generate-icons.cjs  generate-icons.js  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
electron/: db.js  main.js  preload.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs
src/components/: ClipCard.tsx  ClipList.tsx  QuickDraw.tsx  Sidebar.tsx  UpdaterPanel.tsx
src/lib/: updater.ts
src/store/: clips.ts
src/styles/: globals.css
src/types/: clip.ts
