[package]
name = "quilvar"
version = "0.1.1"
edition = "2021"

[lib]
name = "quilvar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quilvar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clipboard-rs = "0.2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
